// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-data-type should handle non-existent data type 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;

exports[`update-data-type should update a data type 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
